[package]
name = "pcap_replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
pcap-parser = { version = "0.13.0", features = ["serialize"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.114"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "iphlpapi", "iptypes", "ntdef", "ws2def",] }
winsockraw-sys = "0.1.0"