[package]
name = "pcap_replay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-platform reimplementation of tcpreplay"
repository = "https://github.com/Angelomirabella/pcap_replay"
readme = "README.md"
keywords = ["pcap", "replay", "cross-platforms"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
pcap-parser = { version = "0.13.0", features = ["serialize"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "iphlpapi", "iptypes", "ntdef", "ws2def",] }
winsockraw-sys = "0.1.0"